--- a/figma.css
+++ b/figma.css
@@ -24,39 +24,32 @@
     gap: 56px;
 }  
 .header__button{
+    display: flex;
 text-decoration: none;
 color: #36485C;
-}
-.container{
-    align-items: center;
+align-items: center;
+gap: 12px;
 }
 .logo{
     margin-right: 109px;
 }
 .header_list{
-    
-    list-style: none;
+     list-style: none;
     display: flex;
-    
-    gap: 56px;
-   
-    
-}
+     gap: 56px;
+    }
 .header-link{
     text-decoration: none;
      color: #36485C
 }
 .hero{
     text-align: center;
-    
-  
-}
+ }
 .hero__title{
     font-weight: bold;
     margin-bottom: 24px;
     color: #172026;
-
-}
+ }
 .hero__subtitle{
 color: #36485C;
 margin-bottom: 24px;
@@ -72,7 +65,7 @@ margin-bottom: 24px;
     text-decoration: none;
     }
 .btn-secondary{
-
+    display: inline-flex;
     align-items: center;
     gap: 12px;
     text-decoration: none;
@@ -81,17 +74,132 @@ margin-bottom: 24px;
 }
 .hero-image{
     position: relative;
+    background-image: url(images/Gradient2.png), url(images/Gradient.png);
     display: inline-block;
+    
 }
 .hero-image img.light{
     display: block;
-    
 }  
 .hero-image img.dark{
-    position: absolute;
+   position: absolute;
     right:1px;
-  
-    bottom: 175px;
-    
+   bottom: 175px;
+}
+.companiess{
+ 
+    display: inline;
+    align-items: center;
+   background-color: #4328EB;
+}
+.hero-logos{
+    gap: 100px;
+    background-color: #eb2828;
+}
+.feature__item{
+margin-top: 120px;
+margin-left: 80px;
+margin-right: 80px;
+}
+
+.feature__tittle{
+    margin-bottom: 16px;
+font-size: 18px;
+color: #0085FF;
+}
+
+.feature__paragraph{
+    font-size: 42px;
+    margin-bottom: 16px;}
+   
+.feature__paragraph2{
+    margin-bottom: 32px;
+font-size: 18px;  
+color: #36485C;  
+}
+.feature__list{
+list-style: none;
 
 }
+.feature__list li img{
+ margin-right: 16px;
+}
+.feature__list li{
+margin-bottom: 32px;
+}
+.feature__button{
+ color: #0085FF; 
+ display: inline-flex;
+}
+.learn-more{
+ color: #0085FF;
+ text-decoration: none;
+}
+.learn-more img{
+border: none;
+margin-left: 12px;
+vertical-align: middle;
+}
+.feature__item{
+display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
+
+.customer__support{
+margin-top: 80px;
+margin-left: 80px;
+margin-right: 80px;
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.customer__support-text{
+    
+    padding: 56px;
+}
+.customer__tittle{
+    font-size: 18px;
+    color: #00A424;
+    margin-bottom: 16px;
+}
+.customer__paragraph1{
+    margin-bottom: 16px;
+    font-size: 42px;
+    color: #172026;
+}
+.customer__paragraph2{
+    margin-bottom: 32px;
+   font-size: 18px; 
+   color: #36485C;
+}
+.customer__list{
+   list-style: none;
+   font-size: 18px;
+   color: #36485C;
+}
+.customer__list li img{
+    margin-right: 16px;
+}
+.customer__list li{
+    margin-bottom: 32px;
+}
+.customer__button{
+   
+    margin-top:32px ;
+    font-size: 18px;
+   
+}
+.learn-more2{
+    
+    text-decoration: none;
+    color: #00A424;
+
+}
+.learn-more2 img{
+    margin-left: 12px;
+    vertical-align: middle;
+}
+   
+
+
